# ai-fullstack-demo

./:  Google Maps-like design.md  .gitignore  Complete Setup Guide: Module 1 & Module 2.md  MAKEFILE_USAGE.md  Makefile  QUICK_START.md  README.md  System-Wide Strategic Enhancement Opportunities.md  Your Current Solution: Azure OpenAI + Snowflake Storage .md  package-lock.json  requirements.txt
backend_gateway/: README.md  (+5 more)
data_foundation_project/: .gitignore  README.md  env_template.txt  pyproject.toml  requirements.txt
data_foundation_project/data/processed/: sample_records.json
data_foundation_project/data/raw/Exploration_Reports_shp/: Exploration_Reports.shx
data_foundation_project/docs/: ai-engineer-bootcamp-summary.md
data_foundation_project/docs/chat-history/claude/: api_interaction_table.md  bootcamp_design_summary.md  bootcamp_schedule.md  chat2map_workflow.mermaid  claude-14-07-2025.md  data_foundation_structure.md  development_steps_explained.md  mock_interfaces_guide.md  module_templates.md
data_foundation_project/docs/chat-history/cursor/: cursor_add_gitignore_to_ignore_data.md  cursor_create_and_configure_model_with17-07-2025.md  (+1 more)
data_foundation_project/scripts/: explore_shapefile.py  load_full_dataset.py  migrate_to_snowflake.py
data_foundation_project/src/: analysis.py  config.py  data_access.py  processing.py  snowflake_client.py
data_foundation_project/src/api/: main.py
data_foundation_project/tests/: check_schema.py  check_schema_simple.py  test_processing.py  test_quick_fixes.py  test_simple_migration.py  test_snowflake_integration.py
(+115 files in other folders)
